--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ html {
   letter-spacing: 0.4rem;
   padding: 0 1.2rem;
   font-weight: 300;
-  color: rgb(254, 252, 252); 
+  color: orange; 
   
   
 }
@@ -179,7 +179,7 @@ header {
   font-size: var(--fs-links-btns);
   font-weight: 700;
   padding: 13px 50px;
-  background: #fc036b;
+  background: #008000;
   border-radius: 30px;
   color: whitesmoke;
 }
@@ -366,7 +366,7 @@ section {
 }
 
 #about_us {
-  background: url("https://awe365.com/wp-content/uploads/2013/07/adventure-sports-hang-gliding-flickrcc-image-by-Steve-Slater.jpg");
+  background: url("https://awe365.com/wp-content/uploads/2013/07/adventure-sports-hang-gliding-flickrcc-image-by-Steve-Slater.jpggggg");
   width: 100%;
   height: 630px;
   background-repeat: no-repeat;
@@ -519,19 +519,19 @@ form {
   padding: 1em;
   margin-bottom: 2em;
   padding-left: 2em;
-  border: 0.1em solid #fc036b;
-  background-color: #fc036b;
-  color: white;
+  border: 0.1em solid #008000;
+  background-color: #f2f3f4;
+  color: black;
   display: flex;
   border-radius: 2em;
   align-items: center;
-  border: #fc036b 0.1em solid;
+  border: #008000 0.1em solid;
   font-size: 1em;
 }
 
 .c_boxx a:hover {
   background-color: white;
-  color: #fc036b;
+  color: #008000;
   transition: all 0.5s ease;
 }
 
