--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: saturate(180%) blur(10px);
+  background: rgba(0, 0, 0, 0);
+  backdrop-filter: saturate(180%) blur(0px);
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -118,7 +118,7 @@ html {
 }
 
 .nav-links li a {
-  color: white;
+  color: orange;
   cursor: pointer;
 }
 
@@ -143,7 +143,7 @@ header {
 }
 
 .header-content {
-  font-family: var(--ff-lora);
+  font-family: var(--ff-lora); 
   letter-spacing: 0.5rem;
   color: whitesmoke;
   text-align: center;
@@ -846,6 +846,7 @@ body.dark{
 }
 
 
+/*
 #quote {
   position: relative;
   font-family: sans-serif;
@@ -860,6 +861,7 @@ body.dark{
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
+*/
 
 @keyframes animate {
   0% {
