--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ header {
 .header-content {
   font-family: var(--ff-lora); 
   letter-spacing: 0.5rem;
-  color: whitesmoke;
+  color: orange;
   text-align: center;
   z-index: 1;
   padding: 4rem;
